More media queries changes for mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 <body>
 
     <div class="container">
+        <div style = "display: flex; justify-content: space-between;;">
+            <p style="font-style: italic; margin-left: 10px;margin-top: 10px;">High Score: <span style="color: green;" class="highScore"></span>&nbsp;&nbsp;&nbsp;&nbsp;Your Score: <span style="color: green;" class="score"></span></p>
+            
+            <p style="color: #f84646; font-size: 14px;margin-right: 10px;margin-top: 10px;">00:<span class="timer"></span></p>
+        </div>
 
-        <p style="color: #f84646; text-align: end; font-size: 14px;margin-right: 10px;">00:<span class="timer"></span></p>
-        <p style="font-style: italic; margin-left: 10px;margin-top: -30px;">High Score: <span style="color: green;" class="highScore"></span>&nbsp;&nbsp;&nbsp;&nbsp;Your Score: <span style="color: green;" class="score"></span></p>
+        
 
         <div class="question">
             <p style="text-align: center;"> <span class="ran1">1</span> x <span class="ran2">2</span> </p>
