Added addition arithmetic

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
 
         <div class="question">
-            <p style="text-align: center;"> <span class="ran1">1</span> x <span class="ran2">2</span> </p>
+            <p style="text-align: center;"> <span class="ran1">1</span> <span class="arithmetic"></span> <span class="ran2">2</span> </p>
         </div>
 
         <div class="instruction">
