Changed arithmetic selection background color

--- a/mathsGame.html
+++ b/mathsGame.html
@@ -61,11 +61,11 @@
         </div>
 
         <div class="selection selectionA">
-            <p></p>
+            <span>*</span><p></p><span>*</span>
         </div>
 
         <div class="selection selectionB">
-            <p >/ and -</p>
+            <span>*</span><p >/ and -</p> <span>*</span>
         </div>
         
         <script src="./selection.js"></script>
