Added division and substraction page, fixed calculation bugs

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
 
         <div class="start-container">
-            <a href="./mathsGame.html"><button disabled>Play Game</button></a> 
+            <a href="./selection.html"><button disabled>Play Game</button></a> 
         </div>
     </div>
 
