--- a/mathsGame2.html
+++ b/mathsGame2.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
 </head>
 <body>
-    <div class="container m-and-a-questions" >
+    <div class="container s-and-d-questions">
         <div style = "display: flex; justify-content: space-between;;">
             <p style="font-style: italic; margin-left: 10px;margin-top: 10px;">High Score: <span style="color: green;" class="highScore"></span>&nbsp;&nbsp;&nbsp;&nbsp;Your Score: <span style="color: green;" class="score"></span></p>
             
@@ -17,7 +17,7 @@
 
         
         <div class="question">
-            <p style="text-align: center;"> <span class="ran1">1</span> <span class="arithmetic"></span> <span class="ran2">2</span> </p>
+            <p style="text-align: center;"> <span class="ran1">9</span> <span class="arithmetic"></span> <span class="ran2">3</span> </p>
         </div>
 
         <div class="instruction">
@@ -47,7 +47,7 @@
             <p class="start">START GAME</p>
         </div>
 
-        <script src="./app.js"></script>
+        <script src="./app2.js"></script>
     </div>
 </body>
 </html>
