--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
         <div class="start-container">
             <a href="./selection.html"><button disabled>Play Game</button></a> 
         </div>
+
+        <div class="signature">
+            <p>Developer and Owner: Odion Asuelimen</p>
+        </div>
     </div>
+
 
     <script src="./index.js"></script>
 </body>
