--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <div class="container">
         <div class="input-container">
-            <input class="input" type="text" placeholder="Enter Full Name">
+            <input class="input" type="text" placeholder="Your Name">
         </div>
 
         <div class="about-game">
