--- a/mathsGame.html
+++ b/mathsGame.html
@@ -20,6 +20,10 @@
             <p style="text-align: center;"> <span class="ran1">1</span> <span class="arithmetic"></span> <span class="ran2">2</span> </p>
         </div>
 
+        <div class="score-div">
+            <h4 class="score"></h4>
+        </div>
+
         <div class="instruction">
             <p>*Select the correct answer*</p>
         </div>
